--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "description": "Archlinux x86_64",
-    "short_description": "Archlinux with GUI (xfce4), docker, Japanese man/font/keyboard",
+    "short_description": "Archlinux with docker, Japanese man/font",
     "name": "u1and0/archlinux",
     "versions": [{
-        "version": "1.0.0",
+        "version": "1.0.1",
         "status": "active",
         "description_html": "<p>Archlinux x86_64</p>",
         "description_markdown": "Archlinux x86_64",
